# cuda-cpp-healthcare-projects

./: .gitignore  CHANGELOG.md  CLAUDE.md  CUDA_CPP_Healthcare_Projects.xlsx  CUDA_CPP_Healthcare_Projects_DeepDive.md  LICENSE  README.md  catalog.json
projects/01-drug-discovery/1.02-particle-mesh-ewald-electrostatics/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/01-drug-discovery/1.02-particle-mesh-ewald-electrostatics/data/: README.md
projects/01-drug-discovery/1.02-particle-mesh-ewald-electrostatics/demo/: README.md  expected_output.txt  run_demo.ps1  run_demo.sh
projects/01-drug-discovery/1.02-particle-mesh-ewald-electrostatics/scripts/: download_data.ps1  download_data.sh  make_synthetic.py
projects/01-drug-discovery/1.02-particle-mesh-ewald-electrostatics/src/: kernels.cu  kernels.cuh  main.cu  pme.h  reference_cpu.cpp  reference_cpu.h
projects/01-drug-discovery/1.32-alchemical-hydration-free-energy-gsolv/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/01-drug-discovery/1.32-alchemical-hydration-free-energy-gsolv/data/: README.md
projects/01-drug-discovery/1.32-alchemical-hydration-free-energy-gsolv/demo/: README.md  expected_output.txt  run_demo.ps1  run_demo.sh
projects/01-drug-discovery/1.32-alchemical-hydration-free-energy-gsolv/scripts/: download_data.ps1  download_data.sh  make_synthetic.py
projects/01-drug-discovery/1.32-alchemical-hydration-free-energy-gsolv/src/: alchemy.h  kernels.cu  kernels.cuh  main.cu  reference_cpu.cpp  reference_cpu.h
projects/01-drug-discovery/1.33-interaction-fingerprinting-binding-mode-clustering/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/01-drug-discovery/1.33-interaction-fingerprinting-binding-mode-clustering/data/: README.md
projects/01-drug-discovery/1.33-interaction-fingerprinting-binding-mode-clustering/demo/: README.md  expected_output.txt  run_demo.ps1  run_demo.sh
projects/01-drug-discovery/1.33-interaction-fingerprinting-binding-mode-clustering/scripts/: download_data.ps1  download_data.sh  make_synthetic.py
projects/01-drug-discovery/1.33-interaction-fingerprinting-binding-mode-clustering/src/: ifp.h  kernels.cu  kernels.cuh  main.cu  reference_cpu.cpp  reference_cpu.h
projects/02-structural-biology/2.08-gpu-molecular-visualization-ray-tracing/: .gitignore  .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/02-structural-biology/2.08-gpu-molecular-visualization-ray-tracing/data/: README.md
projects/02-structural-biology/2.08-gpu-molecular-visualization-ray-tracing/demo/: README.md  expected_output.txt  run_demo.ps1  run_demo.sh
projects/02-structural-biology/2.08-gpu-molecular-visualization-ray-tracing/scripts/: download_data.ps1  download_data.sh  make_synthetic.py
projects/02-structural-biology/2.08-gpu-molecular-visualization-ray-tracing/src/: kernels.cu  kernels.cuh  main.cu  reference_cpu.cpp  reference_cpu.h  render_core.h
projects/02-structural-biology/2.20-heterogeneous-cryo-em-reconstruction-3d-variability/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/02-structural-biology/2.20-heterogeneous-cryo-em-reconstruction-3d-variability/data/: README.md
projects/02-structural-biology/2.20-heterogeneous-cryo-em-reconstruction-3d-variability/demo/: README.md  expected_output.txt  run_demo.ps1  run_demo.sh
projects/02-structural-biology/2.20-heterogeneous-cryo-em-reconstruction-3d-variability/scripts/: download_data.ps1  download_data.sh  make_synthetic.py
projects/02-structural-biology/2.20-heterogeneous-cryo-em-reconstruction-3d-variability/src/: kernels.cu  kernels.cuh  main.cu  reference_cpu.cpp  reference_cpu.h
projects/02-structural-biology/2.22-electron-density-map-analysis-model-validation/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/02-structural-biology/2.22-electron-density-map-analysis-model-validation/data/: README.md
projects/02-structural-biology/2.22-electron-density-map-analysis-model-validation/demo/: README.md  expected_output.txt  run_demo.ps1  run_demo.sh
projects/02-structural-biology/2.27-polarizable-water-model-gpu-dynamics/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/02-structural-biology/2.28-replica-exchange-solute-tempering-rest2-on-gpu/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/03-genomics/3.20-long-read-hifi-assembly-overlap-polishing/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/03-genomics/3.20-long-read-hifi-assembly-overlap-polishing/src/: main.cu  (+5 more)
projects/03-genomics/3.25-base-quality-score-recalibration-bqsr/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/04-medical-imaging/4.09-image-denoising-restoration/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/04-medical-imaging/4.12-optical-coherence-tomography-processing/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/04-medical-imaging/4.31-virtual-colonoscopy-ct-colonography/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/04-medical-imaging/4.33-real-time-mri-reconstruction/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/05-radiation-therapy-medphys/5.02-radiotherapy-treatment-plan-optimization/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/05-radiation-therapy-medphys/5.04-collapsed-cone-superposition-convolution-dose/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/05-radiation-therapy-medphys/5.08-linac-qa-machine-performance-assessment/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/05-radiation-therapy-medphys/5.12-flash-radiotherapy-gpu-modeling/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/05-radiation-therapy-medphys/5.14-gpu-accelerated-adaptive-mr-linac-workflow/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
projects/13-pharmacology-quant/13.05-in-silico-virtual-clinical-trials/: .project_status.json  CMakeLists.txt  README.md  THEORY.md
(+5393 files in other folders)
